css/style.css
/* Start CSS Reset */
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* End CSS Reset */

@font-face {
  font-family: "IBM Plex Sans";
  src: url("../public/fonts/IBMPlexSans.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "IBM Plex Sans";
  src: url("../public/fonts/IBMPlexSans-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Space Mono";
  src: url("../public/fonts/SpaceMono-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Space Mono";
  src: url("../public/fonts/SpaceMono-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Space Mono";
  src: url("../public/fonts/SpaceMono-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Space Mono";
  src: url("../public/fonts/SpaceMono-BoldItalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "TeX Gyre Adventor";
  src: url("../public/fonts/texgyreadventor-regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "TeX Gyre Adventor";
  src: url("../public/fonts/texgyreadventor-italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "TeX Gyre Adventor";
  src: url("../public/fonts/texgyreadventor-bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "TeX Gyre Adventor";
  src: url("../public/fonts/texgyreadventor-bolditalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

:root {
  --text-primary: #ece1c0;
  --text-secondary: #818781;

  --color-bg0: #000000;
  --color-bg1: #2d312c;
  --color-bg2: #363b35;
  --color-bg3: #383d37;

  --color-primary: #81af58;
  --color-secondary: #409cdc;
  --color-accent: #ceba49;

  --scale: 1.333;
  /* Don't change the lines below, you only need to change the --scale above. */
  --size-l-1: calc(1rem * var(--scale));
  --size-l-2: calc(var(--size-l-1) * var(--scale));
  --size-l-3: calc(var(--size-l-2) * var(--scale));
  --size-l-4: calc(var(--size-l-3) * var(--scale));
  --size-l-5: calc(var(--size-l-4) * var(--scale));
  --size-l-6: calc(var(--size-l-5) * var(--scale));
  --size-l-7: calc(var(--size-l-6) * var(--scale));
  --size-s-1: calc(1rem / var(--scale));
  --size-s-2: calc(var(--size-s-1) / var(--scale));
  --size-s-3: calc(var(--size-s-2) / var(--scale));

  --padding-sides: 0 1rem;
  --max-width: 48rem;
  --border-radius-weird: 30% 10% 30% 10% / 10% 30% 10% 30%;
}

body {
  background-color: var(--color-bg0);
  font-size: 1rem;
  font-family: "IBM Plex Sans", sans-serif;
  color: var(--text-primary);
}

.project-tag {
  font-family: "Space Mono", monospace;
}

h1,
h2,
h3,
h4 {
  font-family: "TeX Gyre Adventor", sans-serif;
  color: var(--text-primary);
}

h1 {
  font-size: clamp(var(--size-l-2), 5vw + 1rem, 6rem);
}
h2 {
  font-size: clamp(var(--size-l-1), 4vw + 0.75rem, var(--size-l-3));
}
h3 {
  font-size: clamp(1rem, 3vw + 0.5rem, var(--size-l-2));
}
h4 {
  font-size: clamp(var(--size-s-1), 2vw + 0.25rem, var(--size-l-1));
}

small {
  font-size: var(--size-s-1);
}

#hero-container,
#projects-container,
#footer-container {
  max-width: var(--max-width);
  margin-inline: auto;
  padding: var(--padding-sides);
}

#hero-container {
  width: 100vw;
  height: 100vh;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10rem;

  text-align: center;
}
#hero-container div p {
  color: var(--text-secondary);
  font-size: clamp(var(--size-l-1), 4vw + 0.75rem, var(--size-l-3));
  font-family: "TeX Gyre Adventor", sans-serif;
}
#image-container {
  width: 200px;
  aspect-ratio: 1;

  position: relative;
}
#image-container img {
  width: 200px;
  aspect-ratio: 1;

  border-radius: var(--border-radius-weird);
}
#image-container div:nth-child(2) {
  width: 150px;
  height: 180px;

  position: absolute;
  z-index: -1;
  top: 30%;
  left: 50%;

  background-color: var(--color-primary);
  border-radius: var(--border-radius-weird);
}
#image-container div:nth-child(3) {
  width: 170px;
  height: 150px;

  position: absolute;
  z-index: -2;
  top: -20%;
  left: 25%;

  background-color: var(--color-secondary);
  border-radius: var(--border-radius-weird);
}
#image-container div:nth-child(4) {
  width: 150px;
  aspect-ratio: 1;

  position: absolute;
  z-index: -2;
  top: 40%;
  left: -15%;

  background-color: var(--color-accent);
  border-radius: var(--border-radius-weird);
}
#image-container div:nth-child(5) {
  width: 50px;
  aspect-ratio: 1;

  position: absolute;
  z-index: -2;
  top: -5%;
  left: -10%;

  background-color: var(--text-secondary);
  border-radius: 100%;
}

#projects-container {
  padding-bottom: 2rem;

  display: flex;
  flex-direction: column;
  gap: 1rem;
}
#projects-grid {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.project {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.project h3 {
  color: var(--color-secondary);
}
.project ul {
  list-style-type: none;
  color: var(--color-accent);
}
.project ul li {
  display: inline-block;
  padding: 0 0.4rem;
  background-color: var(--color-bg1);

  border-style: solid;
  border-width: 0.15rem;
  border-radius: var(--border-radius-weird);
}
.tech-icon {
  display: inline-block;
  width: 0.85rem;
  height: 0.85rem;
  margin-right: 0.35rem;
  vertical-align: -0.05rem;
}

footer {
  background-color: var(--color-bg1);
  padding: 1rem 0;
}
#contact-container p,
address {
  display: inline-block;
}

a {
  color: #68aee8;
}
a:hover,
a:focus {
  color: #88c1e9;
}
a:visited {
  color: #a09af8;
}

